fix: align item metadata

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -465,11 +465,15 @@ h2 {
 }
 
 .itemMeta {
-  grid-column: 2;
+  grid-column: 3;
+  grid-row: 2;
+  justify-self: end;
   min-width: 0;
   color: #64748b;
-  font-size: 0.78rem;
-  font-weight: 700;
+  font-size: 0.68rem;
+  font-weight: 750;
+  text-align: right;
+  text-transform: uppercase;
 }
 
 .itemActions {
